--- a/brightenDay()/app/src/main/res/layout/activity_home.xml
+++ b/brightenDay()/app/src/main/res/layout/activity_home.xml
@@ -47,7 +47,7 @@
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:text="Name"
+        android:hint="@string/edit_message"
         android:ems="10"
         android:id="@+id/editText"
         android:layout_centerVertical="true"
@@ -75,6 +75,7 @@
         android:layout_alignLeft="@+id/textView2"
         android:layout_alignStart="@+id/textView2"
         android:layout_alignRight="@+id/textView2"
-        android:layout_alignEnd="@+id/textView2" />
+        android:layout_alignEnd="@+id/textView2"
+        android:onClick="showMoods" />
 
 </RelativeLayout>
